# conan-clinfo

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.github/: settings.yml
test_package/: conanfile.py
